--- a/style.css
+++ b/style.css
@@ -41,37 +41,38 @@ nav {
   width: 15.606rem;
 }
 
-button {
-  background: none;
+.nav-container a {
   cursor: pointer;
-  border: none;
   border-radius: 1.2rem;
   padding: 1.8rem 3rem;
   color: #676665;
   font-size: 1.8rem;
 }
 
-.home-button {
+.nav-container .home-button {
   background-color: #1A1A1A;
   color: #ffffff;
 }
 
-.products-button {
+.nav-container .products-button {
   border: 1px dashed #262626;
   padding: 1.8rem 2.4rem;
   color: #676665;
 }
 
-.cart-button {
+.nav-container .cart-button {
   background-color: #1A1A1A;
   padding: 1.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.cart-button img {
+.nav-container .cart-button img {
   width: 2.4rem;
 }
 
-.contact-button {
+.nav-container .contact-button {
   background-color: #AE9B84;
   padding: 1.8rem 3rem;
   color: #0F0F0F;
