--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ nav {
 
 .nav-left,
 .nav-right {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 1.4rem;
 }
 
@@ -63,9 +64,8 @@ nav {
 .nav-container .cart-button {
   background-color: #1A1A1A;
   padding: 1.8rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  place-items: center;
 }
 
 .nav-container .cart-button img {
