--- a/style.css
+++ b/style.css
@@ -128,11 +128,14 @@ main section {
   object-fit: contain;
 }
 
-.shop-now-btn {
+.hero .shop-now-btn {
   position: absolute;
   bottom: 41.4rem;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.shop-now-btn {
   border: 1px dashed #262626;
   background-color: #1F1F1F;
   padding: 1.8rem 2.4rem;
@@ -243,6 +246,95 @@ main section {
   width: 17.3rem;
 }
 
+/* collection  */
+
+.collection {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 38.6rem repeat(2, 1fr);
+  border: 1px dashed #262626;
+  border-radius: 2rem;
+  overflow: hidden;
+  margin-top: 2.4rem;
+}
+
+.collection-header {
+  grid-column: 1 / 4;
+  padding: 8rem;
+  border-bottom: 1px solid #262626;
+  position: relative;
+}
+
+.collection-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 24.56rem;
+}
+
+.collection-header p {
+  margin-top: 3rem;
+}
+
+.collection-btns {
+  display: flex;
+  gap: 1.6rem;
+  margin-top: 5rem;
+}
+
+.collection-btn {
+  font-family: 'Roboto Mono', monospace;
+  color: #B3B3B2;
+  border: 1px dashed #262626;
+  padding: 1.4rem 2.4rem;
+  border-radius: 1.2rem;
+  font-size: 1.8rem;
+  font-weight: 400;
+}
+
+.collection-box {
+  padding: 3rem;
+  overflow: hidden;
+}
+
+.collection-image {
+  width: 100%;
+}
+
+.details-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+
+.tag {
+  background-color: #1A1A1A;
+  color: #B3B3B2;
+  border: 1px dashed #262626;
+  padding: 1rem 1.6rem;
+  border-radius: 10rem;
+  font-size: 1.8rem;
+  font-weight: 400;
+}
+
+.collection-box h3 {
+  font-family: 'Roboto Mono', monospace;
+  margin-bottom: 1.4rem;
+}
+
+.collection-box .property {
+  font-family: 'Roboto Mono', monospace;
+  color: #81807E;
+}
+
+.collection-box .value {
+  font-family: 'Roboto Mono', monospace;
+  color: #ffffff;
+  margin: 0 2rem 0 0.8rem;
+}
+
 /* questions  */
 
 .questions {
@@ -310,7 +402,7 @@ main section {
 .questions-box.box-4{
   border-bottom: 1px solid #262626;
 }
-  
+
 /* footer */
 
 footer {
