--- a/style.css
+++ b/style.css
@@ -95,6 +95,13 @@ nav {
   color: #676665;
 }
 
+.nav-container .contact-button,
+.nav-container .products-button,
+.nav-container .home-button,
+.nav-container .cart-button {
+  transition: all 0.3s ease;
+}
+
 .nav-container .contact-button:hover,
 .nav-container .products-button:hover,
 .nav-container .home-button:hover,
@@ -102,7 +109,6 @@ nav {
   background-color: #AE9B84;
   color: #0F0F0F;
   border: 1px solid #AE9B84;
-  transition: all 0.3s ease;
 }
 
 /* main  */
@@ -227,13 +233,13 @@ main section {
   font-size: 1.8rem;
   font-weight: 400;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 
 .hero-btn:hover {
   background-color: #AE9B84;
   color: #0F0F0F;
   border: 1px solid #AE9B84;
-  transition: all 0.3s ease;
 }
 
 .hero-content h2 {
@@ -354,13 +360,13 @@ main section {
   font-size: 1.8rem;
   font-weight: 400;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 
 .collection-btn:hover {
   background-color: #AE9B84;
   color: #0F0F0F;
   border: 1px solid #AE9B84;
-  transition: all 0.3s ease;
 }
 
 .collection-box {
@@ -370,11 +376,11 @@ main section {
 
 .collection-image {
   width: 100%;
+  transition: all 0.3s ease;
 }
 
 .collection-image:hover {
   transform: scale(1.1);
-  transition: all 0.3s ease;
 }
 
 .details-container {
@@ -456,13 +462,13 @@ main section {
   font-size: 1.8rem;
   font-weight: 400;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 
 .questions-btn:hover {
   background-color: #AE9B84;
   color: #0F0F0F;
   border: 1px solid #AE9B84;
-  transition: all 0.3s ease;
 }
 
 .questions-box {
@@ -473,11 +479,11 @@ main section {
 .questions-box h3 {
   margin-bottom: 1.6rem;
   width: fit-content;
+  transition: all 0.3s ease;
 }
 
 .questions-box h3:hover {
   color: #AE9B84;
-  transition: all 0.3s ease;
   cursor: default;
 }
 
@@ -601,10 +607,13 @@ footer>div {
   font-weight: 400;
 }
 
+.newsletter ul li {
+  transition: all 0.3s ease;
+}
+
 .newsletter ul li:hover {
   transform: scale(1.1);
   color: #AE9B84;
-  transition: all 0.3s ease;
   cursor: pointer;
 }
 
